--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/newsTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:descendantFocusability="afterDescendants"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
